--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     modApi("me.shedaniel.cloth:cloth-config-fabric:20.0.149") {
         exclude(group: "net.fabricmc.fabric-api")
     }
+
+    modApi "com.terraformersmc:modmenu:16.0.0"
 }
 
 processResources {
