#1 - Adds T2 and  Queue support

--- a/src/client/resources/pvc-mapper-mod.client.mixins.json
+++ b/src/client/resources/pvc-mapper-mod.client.mixins.json
@@ -3,7 +3,7 @@
 	"package": "larrytllama.pvcmappermod.mixin.client",
 	"compatibilityLevel": "JAVA_21",
 	"client": [
-		"ExampleClientMixin"
+		"TabListMixin"
 	],
 	"injectors": {
 		"defaultRequire": 1
